<resources>
    <string name="app_name">Plant Guide</string>
    <string name="add">Add</string>
    <string name="enter_a_name">Enter a name</string>
    <string name="enter_a_description">Enter a description</string>
    <string name="add_new_location">Add new location</string>
    <string name="add_destination">Add destination</string>
    <string name="edit_destination">Edit destination</string>
    <string name="save">Save</string>
    <string name="save_changes">Save changes</string>
    <string name="enter_plant_name">Enter plant name</string>
    <string name="enter_scientific_name">Enter scientific name</string>
    <string name="picture_url">Picture url</string>
    <string name="add_plant">Add plant</string>
    <string name="add_new_plant">Add new plant</string>
    <string name="sort_by">Region:</string>
    <string name="select_geographic_region">Select Geographic Region</string>
    <string name="you_must_fill_all_fields">You must fill all fields</string>
    <string name="list_your_favorite_plants">List your favorite plants</string>
</resources>